Fixed broken layout on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ html {
   grid-template-columns: 270px 1fr;
   grid-template-areas: "sidebar main";
   background-color: rgb(241, 241, 241);
+  min-width: 300px;
 }
 
 /* Sidebar */
@@ -84,7 +85,7 @@ main {
 /* Cards styling */
 .content .card {
   margin-bottom: 30px;
-  min-width: 400px;
+  min-width: 300px;
   width: 60%;
   box-shadow: 0px 1px 0px 1px rgba(103, 101, 109, 0.08);
   border-radius: 6px;
@@ -120,4 +121,21 @@ main {
   background-color: transparent;
   border-top: 1px solid #ebedf2 !important;
   line-height: 30px;
+}
+
+/* Hide sidebar on smaller devices */
+@media screen and (max-width: 768px) {
+  
+  #sidebar {
+    display: none;
+  }
+
+  .wrapper {
+    grid-template-columns: none;
+    grid-template-areas: main;
+  }
+
+  #topbar {
+    justify-content: space-between;
+  }
 }
